[package]
name = "led_matrix"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpi-led-matrix = { git = "https://github.com/rust-rpi-led-matrix/rust-rpi-rgb-led-matrix", branch = "main" }
clap = "2.33"
